--- a/src/App.css
+++ b/src/App.css
@@ -10,16 +10,43 @@ html,
 body {
   width: 100%;
   height: 100%;
-
   margin: 0;
   padding: 0;
+  font-family: Roboto,sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-shadow: 1px 1px 1px rgba(0,0,0,.004);
 }
 
-body {
+h1 {
+  border-left: 6px solid #f0f2f5;
+  padding-left: 12px;
+  color: #788195;
 }
 
-.logo {
-  height: 32px;
-  background: rgba(255,255,255,.2);
-  margin: 16px;
+/* Sider Logo */
+.siderLogo {
+  height: 70px;
+  background: rgba(0, 0, 0, 0.3);
+  margin: 0;
+  padding: 0 10px;
+  text-align: center;
+  overflow: hidden;
+}
+
+.siderLogo h3 a {
+  font-size: 21px;
+  font-weight: 300;
+  line-height: 70px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: white;
+  display: block;
+  text-decoration: none;
+  color: white;
+}
+
+/* Header */
+.headerCollapseIcon {
+  cursor: pointer;
 }
